--- a/app/views/users/piles/show.html.erb
+++ b/app/views/users/piles/show.html.erb
@@ -51,6 +51,6 @@
     </table>
   <% end %>
   <div class="panel-footer">
-    <%= link_to "New Scrap", "", class: "btn btn-primary" %>
+    <%= link_to "New Scrap", new_user_pile_scrap_path(@user, @pile), class: "btn btn-primary" %>
   </div>
 </div>
