--- a/app/assets/stylesheets/bootstrap/index.less
+++ b/app/assets/stylesheets/bootstrap/index.less
@@ -48,3 +48,9 @@
 // Utility classes
 @import "utilities.less";
 @import "responsive-utilities.less";
+
+@import "dark_variants.less";
+@import "more_badges.less";
+
+// Add-ons
+@import "addons/index.less";
