--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Scrap-It</title>
+  <title>scrappr.io</title>
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= csrf_meta_tags %>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
@@ -10,7 +10,6 @@
   <%= render "navbar" %>
 
   <div id="content" class="container">
-    <%  render_breadcrumbs :builder => ::BootstrapBreadcrumbsBuilder %>
     <%= render "flash" %>
 
     <div class="col-md-12">
