Hack-a-thon Changes * removed breadcrumbs - replaced with more direct navigation * removed tinyMCE - unused * added Ace Editor for scrap editing * pagination added to public/scraps * various styles added/updated * added model specs * added helper specs * added routing specs * added CanCan[Can] for ability/permission logic * built some supporting data models for use with scraps editor * refactored some dirty model logic * added yard documentation to many methods tested * placed seed data in migrations for those models that require it (keeps things cleaner) * db/seeds.rb is ONLY for development seeding, prod seeding should be done in appropriate migrations * added :trackable to devise user logic * numerous UI improvements/rearrangements/updates * added "RAW" scrap view functionality - similar to GitHub Gist "Raw" button * factories tweaked based on updated specs
== Unfinished
* add background save for user theme upon selection in editor
* add logic for controller specs

--- a/app/assets/stylesheets/bootstrap/dark_variants.less
+++ b/app/assets/stylesheets/bootstrap/dark_variants.less
@@ -1,6 +1,6 @@
 @import "mixins.less";
 
-@brand-dark: #777;
+@brand-dark: darken(#777, 25%);
 
 //== Additional Button
 @btn-dark-color:  #fff;
@@ -25,4 +25,8 @@
 .badge-dark {
   background-color: @btn-dark-bg;
   color: @btn-dark-color;
+}
+
+.label-dark {
+  .label-variant(@brand-dark);
 }
