--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-inverse navbar-fixed-bottom" role="navigation">
+<nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
   <div class="container">
     <div class="navbar-text navbar-left">
       &copy;<%= Time.now.year %> All rights reserved
