--- a/app/views/public/scraps/index.html.erb
+++ b/app/views/public/scraps/index.html.erb
@@ -1,22 +1,20 @@
+<% content_for(:subnav) do %>
+  <div class="col-md-9">
+    <div class="metadata">
+      <span class="meta-title">Browse Scraps</span>
+    </div>
+  </div>
+  <div class="col-md-3">
+    <!-- TOOD: scrap ordering options -->
+  </div>
+<% end %>
+
 <div class="col-md-9">
-  <% Array(@scraps).each do |scrap| %>
-    <div class="media">
-      <div class="media-body">
-        <h4 class="media-heading">
-          <div class="pull-left">
-            <%= method_label(scrap.http_method) %>
-            <%= link_to scrap.user.username, user_scraps_path(scrap.user) %>
-            <%= link_to "/#{truncate(scrap.endpoint, length: 40, omission: "...")}", user_scrap_path(scrap.user, scrap) %>
-          </div>
-          <div class="pull-right">
-            <%= status_label(scrap.status_code) %>
-            <span class="badge"><%= scrap.content_type %></span>
-          </div>
-          <div class="clearfix"></div>
-        </h4>
-        <pre><code class="json"><%= scrap.truncate_body(4) %></code></pre>
-      </div><!-- .media-body -->
-    </div><!-- .media -->
+  <% if Array(@scraps).empty? %>
+    <p>No scraps... how boring</p>
+  <% else %>
+    <%= render partial: "scraps/index_item", collection: @scraps %>
+    <%= paginate @scraps %>
   <% end %>
 </div>
 <div class="col-md-3">
