--- a/app/views/users/scraps/show.html.erb
+++ b/app/views/users/scraps/show.html.erb
@@ -1,43 +1,120 @@
-<div class="col-md-9">
-  <div class="panel panel-default">
-    <div class="panel-heading">
-      <div class="btn-group pull-right">
-        <%= link_to edit_user_scrap_path(@user, @scrap), class: 'btn btn-sm btn-default' do %>
-          <span class="fa fa-pencil"></span>&nbsp; Edit
-        <% end %>
-      </div>
-      <span class="panel-title">
-        <%= method_label(@scrap.http_method) %>
-        <%= user_api_scrap_url(@user, @scrap) %>
-      </span>
-      <div class="clearfix"></div>
-    </div>
-    <!-- TODO: HEADERS
-    <table class="table table-condensed table-striped">
-      <thead>
-        <tr>
-          <th class="col-md-3">Header</th>
-          <th class="col-md-9">Value</th>
-        </tr>
-      </thead>
-    </table>
-    -->
-    <%= ace_container @scrap, "viewer" do %><%= @scrap.body %><% end %>
-    <div class="panel-footer">
-      <div class="row">
-        <div class="col-md-6 text-left pull-left">
-          <%= status_label(@scrap.status_code) %>
-          <span class="badge"><%= @scrap.content_type %></span>
-        </div>
-        <div class="col-md-6 text-right pull-right">
-          <%= link_to user_scrap_path(@user, @scrap), method: :delete, class: "btn btn-sm btn-danger" do %>
-            <span class="fa fa-trash-o"></span> Destroy
+<% content_for :subnav do %>
+  <div class="row">
+    <div class="col-sm-8">
+      <div class="media">
+        <%= render partial: "avatar", locals: { user: @user } %>
+        <div class="media-body">
+          <div class="metadata">
+            <span class="meta-owner">
+              <%= link_to @scrap.user.username, user_scraps_path(@scrap.user) %>
+            </span>
+            /
+            <span class="meta-endpoint">
+              <%= link_to user_scrap_path(@scrap.user, @scrap) do %>
+                <%= @scrap.endpoint %>
+              <% end %>
+            </span>
+          </div>
+          <small>
+            <%= method_label(@scrap.http_method) %>
+            <span class="fa fa-long-arrow-right fa-fw"></span>
+            <%= status_label(@scrap.status_code) %>
+            <code><%= @scrap.content_type %></code>
+          </small>
+          <br />
+          <% if !@scrap.is_public? %>
+            <span class="label label-default">Invisible</span>
           <% end %>
+          <small>
+            Last updated <%= time_ago_in_words(@scrap.updated_at) %> ago
+          </small>
+          <br />
         </div>
       </div>
+    </div>
+    <div class="col-sm-4 text-right">
+      <% if can?(:modify, @scrap) %>
+          <%= link_to raw_user_scrap_path(@user, @scrap), class: "btn btn-default", target: :blank do %>
+            <span class="fa fa-file-text-o fa-fw"></span> Raw
+          <% end %>
+        <div class="btn-group">
+          <%= link_to edit_user_scrap_path(@user, @scrap), class: 'btn btn-default' do %>
+            <span class="fa fa-pencil"></span>&nbsp; Edit
+          <% end %>
+          <button class="dropdown-toggle btn btn-default" data-toggle="dropdown">
+            <span class="fa fa-caret-down"></span>
+          </button>
+          <ul class="dropdown-menu dropdown-menu-right" role="menu">
+            <li>
+              <%= link_to user_scrap_path(@user, @scrap), method: :delete, data: { confirm: "Are you sure?" } do %>
+                <span class="text-danger">
+                  <span class="fa fa-trash-o fa-fw"></span> Delete
+                </span>
+              <% end %>
+            </li>
+          </ul>
+        </div>
+      <% end %>
     </div>
   </div>
+<% end %>
+
+<div class="row">
+  <div class="col-md-3 col-md-push-9">
+    <div class="tabs-right border-left">
+      <ul class="tabbed-nav nav nav-tabs nav-stacked" role="tablist">
+        <li class="active">
+          <a href="#pane-response">
+            <span class="fa fa-code fa-fw"></span> Response
+          </a>
+        </li>
+        <li>
+          <a href="#pane-headers">
+            <span class="fa fa-asterisk fa-fw"></span> Headers
+          </a>
+        </li>
+      </ul>
+    </div>
+    <dl class="sidebar-info">
+      <dt>HTTP Method</dt>
+      <dd><%= method_label(@scrap.http_method) %></dd>
+
+      <dt>HTTP Status</dt>
+      <dd><%= status_label(@scrap.status_code) %></dd>
+
+      <dt>Content Type</dt>
+      <dd><%= @scrap.content_type %></dd>
+    </dl>
+    <!-- TODO: copy endpoint url -->
+  </div>
+  <div class="col-md-9 col-md-pull-3">
+    <p class="meta-description"><%= @scrap.description %></p>
+    <div class="tab-content">
+      <div class="tab-pane fade in active" id="pane-response">
+        <div class="media">
+          <div class="media-heading">
+            <strong><%= user_api_scrap_url(@user, @scrap) %></strong>
+          </div>
+          <div class="media-body">
+            <pre><code class="<%= @scrap.language %>"><%= @scrap.body %></code></pre>
+          </div>
+        </div>
+      </div><!-- /#pane-response -->
+      <div class="tab-pane fade" id="pane-headers">
+        <table class="table table-condensed table-bordered">
+          <colgroup>
+            <col class="col-md-3">
+            <col class="col-md-9">
+          </colgroup>
+          <% @scrap.http_headers.keys.sort.each do |header| %>
+            <tr>
+              <th><%= header %></th>
+              <td><code><%= @scrap.http_headers[header] %></code></td>
+            </tr>
+          <% end %>
+        </table>
+      </div><!-- /#pane-headers -->
+    </div><!-- /.tab-content -->
+  </div>
 </div>
-<div class="col-md-3">
-  <!-- Vertical Tabs -->
-</div>
+
