--- a/app/views/users/scraps/_editor.html.erb
+++ b/app/views/users/scraps/_editor.html.erb
@@ -7,9 +7,10 @@
   data-theme="<%= user_theme %>"
   data-hidden_id="#scrap_body_<%= scrap.id %>"
   data-workspace_id="#editor-workspace-<%= scrap.id %>"
+  data-user="<%= current_user.username %>"
 >
   <div class="menu">
-    <div class="col-sm-4"><!-- THEME SELECT -->
+    <div class="col-sm-5"><!-- THEME SELECT -->
       <div class="input-group select2-bootstrap-prepend">
         <span class="input-group-addon">
           <span class="fa fa-paint-brush"></span>
@@ -19,7 +20,7 @@
         </select>
       </div>
     </div>
-    <div class="col-sm-4"></div>
+    <div class="col-sm-3"></div>
     <div class="col-sm-4"><!-- LANGUAGE SELECT -->
       <div class="input-group select2-bootstrap-prepend">
         <span class="input-group-addon">
@@ -27,10 +28,10 @@
         </span>
         <%= form.select :language,
           options_for_select(Scrap::LANGUAGES, scrap.language),
-          { include_blank: true },
+          {},
           {
             class: "form-control input-sm select2-nosearch",
-            data: { bind: "value: syntax", placeholder: "Language" }
+            data: { bind: "value: syntax" }
           }
         %>
       </div>
@@ -44,4 +45,9 @@
       <%= form.hidden_field :body, id: "scrap_body_#{scrap.id}" %>
     </div>
   </div><!-- /.workspace-row -->
+
+  <div class="status-bar text-right">
+      <span class="status-message" data-bind="text: status_message"></span>
+      &nbsp;
+  </div>
 </div>
