--- a/app/views/scraps/_index_item.html.erb
+++ b/app/views/scraps/_index_item.html.erb
@@ -34,6 +34,8 @@
         - <span class="label label-default">Invisible</span>
       <% end %>
     </p>
-    <pre><code class="<%= scrap.language %>"><%= scrap.truncate_body(4) %></code></pre>
+    <div class="scrap-preview">
+      <pre><code class="<%= scrap.language %>"><%= scrap.truncate_body(4) %></code></pre>
+    </div>
   </div><!-- .media-body -->
 </div><!-- .media -->
