--- a/app/assets/stylesheets/_theme.css.scss
+++ b/app/assets/stylesheets/_theme.css.scss
@@ -19,7 +19,6 @@ body {
   display: block;
 }
 
-
 .navbar {
   &.navbar-inverse {
     .navbar-divider {
@@ -153,9 +152,10 @@ $editor-menu-bg: darken($editor-border, 20%);
   .status-bar {
     border-top: 1px solid $editor-menu-bg;
     background-color: $editor-border;
-    padding: 2px;
-    font-family: monospace;
-    font-size: 0.7em;
+    .status-message {
+      font-family: monospace;
+      font-size: 0.8em;
+    }
   }
 }//.scrap-editor
 
@@ -205,5 +205,23 @@ img {
   }
   .blob-content {
     z-index: 0;
+  }
+}
+
+dl.inline {
+  dt, dd {
+    display: inline;
+    float: left;
+  }
+  dt {
+    clear: left;
+    font-weight: bold;
+    &:after {
+      content: ':';
+    }
+  }
+  dd {
+    clear: right;
+    margin: 0 0 0 0.8em;
   }
 }
