fix(config) production configuration tweaks
* switch to using font-awesome-rails gem
* tweak deploy scripts
* tweak unicorn configs
* tweaks to deploy paths

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,7 +14,7 @@
  *= require bootstrap
  *
  * http://fontawesome.github.io/Font-Awesome/
- *= require fontawesome
+ *= require font-awesome
  *
  *= require select2
  *= require select2-bootstrap
