fix(link) github link in footer
* Closes #36

--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -5,7 +5,7 @@
     </div>
     <div class="navbar-text navbar-right">
       Fork this app
-      <%= link_to "on Github", "" %>
+      <%= link_to "on Github", "https://github.com/ScrapprIO/scrappr.io",  target:"_blank" %>
       <span class="fa fa-github-alt"></span>
     </div>
   </div>
