feat(footer): Add version to footer
* Closes #28

--- a/app/assets/stylesheets/_theme.css.scss
+++ b/app/assets/stylesheets/_theme.css.scss
@@ -225,3 +225,10 @@ dl.inline {
     margin: 0 0 0 0.8em;
   }
 }
+
+.release_version {
+  font-size: 0.9em;
+  font-style: italic;
+  font-weight: 700;
+  color: #777;
+}
