--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -1,7 +1,8 @@
 <nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
   <div class="container">
     <div class="navbar-text navbar-left">
-      &copy;<%= Time.now.year %> All rights reserved
+      &copy; <%= Time.now.year %> All rights reserved
+      (<span class="release_version"><%= APP_VERSION %></span>)
     </div>
     <div class="navbar-text navbar-right">
       View
