--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="navbar-text navbar-left">
       &copy; <%= Time.now.year %> All rights reserved
-      (<span class="release_version"><%= APP_VERSION %></span>)
+      (<span class="release_version"><%= APP_CONFIG['version'] %></span>)
     </div>
     <div class="navbar-text navbar-right">
       View
