feat(logo): update logo

--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -1,7 +1,9 @@
 <nav class="navbar navbar-primary navbar-default navbar-static-top" role="navigation">
   <div class="container">
     <div class="navbar-header text-left">
-      <span class="navbar-brand"><span class="label label-default">S</span></span>
+      <span class="navbar-brand">
+        <%= image_tag "scrapprio_logo_96x24-bw.png", alt: "ScrapprIO", title: "ScrapprIO" %>
+      </span>
     </div>
     <div class="navbar-divider">&nbsp;</div>
     <div class="navbar-left text-left">
